Fixed workshops title, fixed resources overflow-x issue

--- a/site/src/app/views/resources/Resources.scss
+++ b/site/src/app/views/resources/Resources.scss
@@ -8,8 +8,8 @@ $coral: "/assets/images/resources-coral.svg";
 	background: linear-gradient(180deg, #bfe6f2 0%, #258bbe 100%);
 	position: relative;
 	z-index: 10;
-	margin-top: 140px;
 	padding-top: 50px;
+	overflow-x: hidden;
 }
 
 #left-fishes {
@@ -62,6 +62,8 @@ $coral: "/assets/images/resources-coral.svg";
 	letter-spacing: 0.5rem;
 	text-shadow: 9px 16px 10px #68b3d7;
 	text-align: center;
+	margin-top: 140px;
+	margin-bottom: 40px;
 
 	@media screen and (max-width: $break-medium) {
 		font-size: 4rem;
